fix: 用户配置相关
